--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -12,9 +12,7 @@ spec:
       labels:
         name: flux
     spec:
-      # The serviceAccount is only needed for Kubernetes with RBAC.
-      # You will also need to create the resources in flux-account.yaml.
-      # serviceAccount: flux
+      serviceAccount: flux
       volumes:
       - name: git-key
         secret:
