--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -18,9 +18,14 @@ spec:
         defaultMode: 0400 # when mounted read-only, we won't be able to chmod
         secret:
           secretName: flux-git-deploy
+
+      # This is a tmpfs used for generating SSH keys. In K8s >= 1.10,
+      # mounted secrets are read-only, so we need a separate volume we
+      # can write to.
       - name: git-keygen
         emptyDir:
           medium: Memory
+
       containers:
       - name: flux
         # There are no ":latest" images for flux. Find the most recent
@@ -44,12 +49,14 @@ spec:
         # - --memcached-hostname=memcached.default.svc.cluster.local
         # - --memcached-service=memcached
 
-        # this must be supplied, and be in the tmpfs (emptyDir) mounted above
-        --ssh-keygen-dir=/var/fluxd/keygen
+        # this must be supplied, and be in the tmpfs (emptyDir)
+        # mounted above, for K8s >= 1.10
+        - --ssh-keygen-dir=/var/fluxd/keygen
 
         # replace (at least) the following URL
         - --git-url=git@github.com:weaveworks/flux-example
         - --git-branch=master
+
         # include these next two to connect to an "upstream" service
         # (e.g., Weave Cloud). The token is particular to the service.
         # - --connect=wss://cloud.weave.works/api/flux
