--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -31,7 +31,11 @@ jobs:
               make release-bins
               bin/upload-binaries
               docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" quay.io
-              docker push "quay.io/weaveworks/flux:$(docker/image-tag)"
+              docker push "quay.io/weaveworks/flux:${CIRCLE_TAG}"
+            fi
+            if echo "${CIRCLE_TAG}" | grep -Eq "helm-[0-9]+(\.[0-9]+)*(-[a-z]+)?$"; then
+              docker login -u "$DOCKER_REGISTRY_USER" -p "$DOCKER_REGISTRY_PASSWORD" quay.io
+              docker push "quay.io/weaveworks/helm-operator:$(echo "$CIRCLE_TAG" | cut -c 6-)"
             fi
 
 workflows:
@@ -40,5 +44,5 @@ workflows:
     jobs:
       - build:
           filters:
-            tags:  
-              only: /[0-9]+(\.[0-9]+)*(-[a-z]+)?/
+            tags:
+              only: /(helm-)?[0-9]+(\.[0-9]+)*(-[a-z]+)?/
