--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -10,4 +10,4 @@ spec:
     listKind: FluxHelmReleaseList
     plural: fluxhelmreleases
   scope: Namespaced
-  version: v1alpha
+  version: v1alpha2
