Add org.opencontainers.image.* labels to Dockerfiles
- This should ultimately help for image-to-code back references.
- `org.label-schema.*` labels are now deprecated, in favour of `org.opencontainers.image.*` labels.
  See also: https://github.com/opencontainers/image-spec/blob/master/annotations.md#back-compatibility-with-label-schema
- `MAINTAINER` is deprecated, in favour of the `maintainer` label. Both were missing so the latter was added.

--- a/docker/Dockerfile.helm-operator
+++ b/docker/Dockerfile.helm-operator
@@ -1,7 +1,13 @@
 FROM alpine:3.6
 
 # These are pretty static
-LABEL org.label-schema.schema-version="1.0" \
+LABEL maintainer="Weaveworks <help@weave.works>" \
+      org.opencontainers.image.title="flux-helm-operator" \
+      org.opencontainers.image.description="The Flux Helm operator, for releasing Helm charts according to git" \
+      org.opencontainers.image.url="https://github.com/weaveworks/flux" \
+      org.opencontainers.image.source="git@github.com:weaveworks/flux" \
+      org.opencontainers.image.vendor="Weaveworks" \
+      org.label-schema.schema-version="1.0" \
       org.label-schema.name="flux-helm-operator" \
       org.label-schema.description="The Flux Helm operator, for releasing Helm charts according to git" \
       org.label-schema.url="https://github.com/weaveworks/flux" \
@@ -28,5 +34,7 @@ ARG BUILD_DATE
 ARG VCS_REF
 
 # These will change for every build
-LABEL org.label-schema.vcs-ref=$VCS_REF \
-      org.label-schema.build-date=$BUILD_DATE
+LABEL org.opencontainers.image.revision="$VCS_REF" \
+      org.opencontainers.image.created="$BUILD_DATE" \
+      org.label-schema.vcs-ref="$VCS_REF" \
+      org.label-schema.build-date="$BUILD_DATE"
