--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,8 @@ testdata/sidecar/sidecar-linux-amd64
 testdata/sidecar/.sidecar
 docker/fluxy-dumbconf.priv
 test/profiles
+test/deps
+test/bin/yq
+test/bin/kubectl
+test/bin/helm
+test/bin/minikube
