change sshdir mounth path to /etc/ssh/ssh_known_hosts
What does this PR do?

- Changes the mount path for known_hosts

Why is this PR needed?

- To bring the helm templates inline with the changes to the Dockerfile
in PR #1188.

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -38,8 +38,8 @@ spec:
         imagePullPolicy: {{ .Values.helmOperator.pullPolicy }}
         volumeMounts:
         - name: sshdir
-          mountPath: /root/.ssh/known_hosts
-          subPath: known_hosts
+          mountPath: /etc/ssh/ssh_known_hosts
+          subPath: ssh_known_hosts
           readOnly: true
         - name: git-key
           mountPath: /etc/fluxd/ssh
