Change helm chart to only template tls key and cert file names instead of the full path
- Includes a fix for the CA Certificate ConfigMap. The ca.crt file content was not properly templated.
- Instead of the full path, a user only has the option to configure the key and certificate file name, as the path is hardcoded within the template.
- Add new helmOperator properties to the chart's README file

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -73,8 +73,8 @@ spec:
         - --tiller-namespace={{ .Values.helmOperator.tillerNamespace }}
         {{- if .Values.helmOperator.tls.enable }}
         - --tiller-tls-enable={{ .Values.helmOperator.tls.enable }}
-        - --tiller-tls-key-path={{ .Values.helmOperator.tls.keyPath }}
-        - --tiller-tls-cert-path={{ .Values.helmOperator.tls.certPath }}
+        - --tiller-tls-key-path=/etc/fluxd/helm/{{ .Values.helmOperator.tls.keyFile }}
+        - --tiller-tls-cert-path=/etc/fluxd/helm/{{ .Values.helmOperator.tls.certFile }}
         {{- if .Values.helmOperator.tls.verify }}
         - --tiller-tls-verify={{ .Values.helmOperator.tls.verify }}
         - --tiller-tls-ca-cert-path=/etc/fluxd/helm-ca/ca.crt
