--- a/chart/flux/templates/helm-tls.yaml
+++ b/chart/flux/templates/helm-tls.yaml
@@ -5,6 +5,7 @@ kind: ConfigMap
 metadata:
   name: {{ template "flux.fullname" . }}-helm-tls-ca-config
 data:
-  ca.crt: {{ .Values.helmOperator.tls.caContent }}
+  ca.crt: |
+    {{ .Values.helmOperator.tls.caContent | indent 4 }}
 {{- end -}}
 {{- end -}}
