Process known_hosts from string literals with newline separation per key
What does this MR do?

- Splits newline separated known_host keys into multiple lines

Why is this MR needed?

- To allow a string literal to define known_hosts rather
than relying purely on a --from-file in kubectl create

--- a/chart/flux/templates/ssh.yaml
+++ b/chart/flux/templates/ssh.yaml
@@ -3,4 +3,13 @@ kind: ConfigMap
 metadata:
   name: {{ template "flux.fullname" . }}-ssh-config
 data:
-  known_hosts: {{ .Values.ssh.known_hosts }}
+  known_hosts: |
+    {{- if .Values.ssh.known_hosts }}
+      {{- if contains "\n" .Values.ssh.known_hosts }}
+        {{- range $value := .Values.ssh.known_hosts | splitList "\n" }}
+          {{ print $value }}
+        {{- end }}
+      {{- else }}
+        {{- .Values.ssh.known_hosts }}
+      {{- end }}
+    {{- end }}
