--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -75,3 +75,7 @@ ssh:
   # Overrides for git over SSH. If you use your own git server, you
   # will likely need to provide a host key for it in this field.
   known_hosts: ""
+
+#for https://github.com/justinbarrick/fluxcloud/
+#additionalArgs:
+# - --connect=ws://fluxcloud
