--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -14,6 +14,27 @@ spec:
     kind: FluxHelmRelease
     listKind: FluxHelmReleaseList
     plural: fluxhelmreleases
+    shortNames:
+    - fhr
   scope: Namespaced
   version: v1alpha2
+  versions:
+    - name: v1alpha2
+      served: true
+      storage: true
+  validation:
+    openAPIV3Schema:
+      properties:
+        spec:
+          required:
+            - chartGitPath
+            - values
+          properties:
+            releaseName:
+              type: string
+              pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
+            chartGitPath:
+              type: string
+            values:
+              type: object
 {{- end -}}
