--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -9,5 +9,26 @@ spec:
     kind: FluxHelmRelease
     listKind: FluxHelmReleaseList
     plural: fluxhelmreleases
+    shortNames:
+    - fhr
   scope: Namespaced
   version: v1alpha2
+  versions:
+    - name: v1alpha2
+      served: true
+      storage: true
+  validation:
+    openAPIV3Schema:
+      properties:
+        spec:
+          required:
+            - chartGitPath
+            - values
+          properties:
+            releaseName:
+              type: string
+              pattern: "^[a-z0-9]([-a-z0-9]*[a-z0-9])?$"
+            chartGitPath:
+              type: string
+            values:
+              type: object
