--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -30,9 +30,9 @@ spec:
       # file file, which you will need to do if you host your own git
       # repo rather than using github or the like. You'll also need to
       # mount it into the container, below.
-
       # - name: ssh-config
-      #   configMap: flux-ssh-config
+      #   configMap: 
+      #     name: flux-ssh-config
 
       containers:
       - name: flux
