Simplify verify_known_hosts and make deterministic
We can obtain the fingerprints for all entries in known_hosts at once;
so simplest way to determine if they are correct is to compare the
sorted output with a known good, sorted value.

This also avoids depending on the order of the known_host entries, by
comparing sorted values.

--- a/docker/Dockerfile.helm-operator
+++ b/docker/Dockerfile.helm-operator
@@ -11,8 +11,8 @@ RUN ssh-keyscan github.com gitlab.com bitbucket.org >> /etc/ssh/ssh_known_hosts
 COPY ./ssh_config /etc/ssh/ssh_config
 
 # Verify newly added known_hosts (man-in-middle mitigation)
-ADD ./verify_known_hosts /home/flux/verify_known_hosts
-RUN sh /home/flux/verify_known_hosts /etc/ssh/ssh_known_hosts && rm /home/flux/verify_known_hosts
+ADD ./verify_known_hosts.sh /home/flux/verify_known_hosts.sh
+RUN sh /home/flux/verify_known_hosts.sh /etc/ssh/ssh_known_hosts && rm /home/flux/verify_known_hosts.sh
 
 COPY ./kubectl /usr/local/bin/
 
