Add helm-op Git SSH secret option to Flux chart

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -33,7 +33,11 @@ spec:
           defaultMode: 0600
       - name: git-key
         secret:
+          {{- if .Values.helmOperator.git.secretName }}
+          secretName: {{ .Values.helmOperator.git.secretName }}
+          {{- else }}
           secretName: {{ template "flux.fullname" . }}-git-deploy
+          {{- end }}
           defaultMode: 0400
       {{- if .Values.helmOperator.tls.enable }}
       - name: helm-tls-certs
