--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -33,6 +33,11 @@ helmOperator:
     url: ""
     branch: ""
     chartsPath: ""
+    # generate a SSH key named identity: ssh-keygen -q -N "" -f /tmp/identity
+    # create a Kubernetes secret: kubectl -n flux create secret generic helm-ssh --from-file=/tmp/identity
+    # add /tmp/identity.pub as a read-only deployment key in your GitHub repo where the charts are
+    # set the secret name (helm-ssh) below
+    secretName: ""
 rbac:
   # Specifies whether RBAC resources should be created
   create: true
