--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -85,10 +85,30 @@ git:
   user: "Weave Flux"
   # Email to use as git committer
   email: "support@weave.works"
+  # If set, the author of git commits will reflect the user who initiated the commit and will differ from the git committer.
+  setAuthor: false
+  # label to keep track of sync progress
+  label:
+  # append "[ci skip]" to commit messages so that CI will skip builds
+  ciSkip: true
   # Path within git repo to locate Helm charts (relative path)
   chartsPath: "charts"
   # Period at which to poll git repo for new commits
   pollInterval: "30s"
+
+registry:
+  # Duration to keep cached image info. Must be < 1 month.
+  cacheExpiry: "1h"
+  # Period at which to check for updated images
+  pollInterval: "5m"
+  # Maximum registry requests per second per host
+  rps: 200
+  # Maximum number of warmer connections to remote and memcache
+  burst: 125
+  # Output trace of image registry requests to log
+  trace: false
+  # Use HTTP for this domains eg --set registry.insecureHosts="registry1.cluster.local,registry2.cluster.local"
+  insecureHosts:
 
 ssh:
   # Overrides for git over SSH. If you use your own git server, you
