--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -1,6 +1,5 @@
 {{- $gitURL := default .Values.git.url .Values.helmOperator.git.url }}
 {{- $gitBranch := default .Values.git.branch .Values.helmOperator.git.branch }}
-{{- $gitChartsPath := default .Values.git.chartsPath .Values.helmOperator.git.chartsPath }}
 {{- $gitPollInterval := default .Values.git.pollInterval .Values.helmOperator.git.pollInterval }}
 {{- if .Values.helmOperator.create -}}
 apiVersion: apps/v1beta2
@@ -77,8 +76,8 @@ spec:
         args:
         - --git-url={{ $gitURL }}
         - --git-branch={{ $gitBranch }}
-        - --git-charts-path={{ $gitChartsPath }}
         - --git-poll-interval={{ $gitPollInterval }}
+        - --git-charts-path={{ .Values.helmOperator.git.chartsPath }}
         - --charts-sync-interval={{ .Values.helmOperator.chartsSyncInterval }}
         - --charts-sync-timeout={{ .Values.helmOperator.chartsSyncTimeout }}
         - --log-release-diffs={{ .Values.helmOperator.logReleaseDiffs }}
