--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -17,7 +17,7 @@ service:
 helmOperator:
   create: false
   repository: quay.io/weaveworks/helm-operator
-  tag: 0.1.1-alpha
+  tag: 0.2.0
   pullPolicy: IfNotPresent
   # Log the diff when a chart release diverges
   logReleaseDiffs: false
