--- a/deploy/flux-deployment.yaml
+++ b/deploy/flux-deployment.yaml
@@ -27,9 +27,9 @@ spec:
           medium: Memory
        
       # This is holding the reference to docker-credentials if provided from the outside 
-      - name: docker-creds
-        configMap:
-          name: docker-creds
+      #- name: docker-creds
+      #  secret:
+      #    name: docker-creds
 
       # The following volume is for using a customised known_hosts
       # file file, which you will need to do if you host your own git
@@ -54,8 +54,8 @@ spec:
           readOnly: true # this will be the case perforce in K8s >=1.10
         - name: git-keygen
           mountPath: /var/fluxd/keygen # to match location given in image's /etc/ssh/config
-        - name: docker-creds
-          mountPath: /docker-creds
+        - name: docker-creds  
+          mountPath: /etc/fluxd/docker # use docker credentials if you want to provide your privates docker-registry token
 
         # Include this if you need to mount a customised known_hosts
         # file; you'll also need the volume declared above.
@@ -77,7 +77,9 @@ spec:
         # replace or remove the following URL
         - --git-url=git@github.com:weaveworks/flux-example
         - --git-branch=master
-        - --docker-config=/docker-creds/config.json
+
+        # include, when you want to use docker credentials
+        #- --docker-config=/etc/fluxd/docker/config.json
 
         # include these next two to connect to an "upstream" service
         # (e.g., Weave Cloud). The token is particular to the service.
