--- a/deploy-helm/helm-operator-deployment.yaml
+++ b/deploy-helm/helm-operator-deployment.yaml
@@ -1,10 +1,13 @@
 ---
-apiVersion: apps/v1beta1
+apiVersion: apps/v1
 kind: Deployment
 metadata:
   name: flux-helm-operator
 spec:
   replicas: 1
+  selector:
+    matchLabels:
+      name: flux-helm-operator
   strategy:
     type: Recreate
   template:
