--- a/chart/flux/templates/memcached.yaml
+++ b/chart/flux/templates/memcached.yaml
@@ -28,7 +28,9 @@ spec:
         args:
         - -m 64    # Maximum memory to use, in megabytes. 64MB is default.
         - -p 11211    # Default port, but being explicit is nice.
+        {{- if .Values.memcached.verbose }}
         - -vv    # This gets us to the level of request logs.
+        {{- end }}
         ports:
         - name: memcached
           containerPort: 11211
