Don't create git secret if name is overridden
The manifest operator now takes a secretName like the Helm operator
does. If the secretName is specified (i.e. is non-default), the user is
assumed to be bringing their own secret and none is created.

--- a/chart/flux/templates/secret.yaml
+++ b/chart/flux/templates/secret.yaml
@@ -1,5 +1,7 @@
+{{- if not .Values.git.secretName }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "flux.fullname" . }}-git-deploy
 type: Opaque
+{{- end }}
