Make automatic creation of the ssh deploy key secret optional
What does this commit/MR/PR do?

- Makes the creation of the flux deploy key secret optional

Why is this commit/MR/PR needed?

- To allow for manual creation of the flux deploy key secret as
outlined in the
[docs](https://github.com/weaveworks/flux/blob/04b5156ebc7ce0b25cbf6304b69c5f7e2d683ccd/site/standalone/setup.md#2-specify-a-key-to-use)

--- a/chart/flux/templates/secret.yaml
+++ b/chart/flux/templates/secret.yaml
@@ -1,5 +1,7 @@
+{{- if (eq .Values.deployKeySecret.create true) }}
 apiVersion: v1
 kind: Secret
 metadata:
   name: {{ template "flux.fullname" . }}-git-deploy
 type: Opaque
+{{- end -}}
