Allow custom ssh keys for flux and helm operators

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -35,6 +35,8 @@ spec:
         secret:
           {{- if .Values.helmOperator.git.secretName }}
           secretName: {{ .Values.helmOperator.git.secretName }}
+          {{- else if .Values.git.secretName }}
+          secretName: {{ .Values.git.secretName }}
           {{- else }}
           secretName: {{ template "flux.fullname" . }}-git-deploy
           {{- end }}
