--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -94,6 +94,12 @@ git:
   ciSkip: false
   # Period at which to poll git repo for new commits
   pollInterval: "5m"
+  # generate a SSH key named identity: ssh-keygen -q -N "" -f ./identity
+  # create a Kubernetes secret: kubectl -n flux create secret generic flux-ssh --from-file=./identity
+  # delete the private key: rm ./identity
+  # add ./identity.pub as a read-only deployment key in your GitHub repo where the charts are
+  # set the secret name (flux-ssh) below
+  secretName: ""
 
 registry:
   # Duration to keep cached image info. Must be < 1 month.
