--- a/Gopkg.toml
+++ b/Gopkg.toml
@@ -1,5 +1,5 @@
 # See usage of https://github.com/kubernetes/code-generator if regeneration of the following is required:
-#       apis/integrations.flux/zz_generated.deepcopy.go
+#       integrations/apis/flux.weave.works/*/zz_generated.deepcopy.go
 #       integrations/client/*
 #
 required = ["k8s.io/code-generator/cmd/client-gen"]
@@ -43,8 +43,8 @@ required = ["k8s.io/code-generator/cmd/client-gen"]
   version = "~v2.10.0"
 
 [[constraint]]
-	name = "github.com/justinbarrick/go-k8s-portforward"
-	version = "v1.0.1"
+  name = "github.com/justinbarrick/go-k8s-portforward"
+  version = "v1.0.1"
 
 [[constraint]]
   branch = "master"
