Fix indentation of additionalArgs in helm chart
- This indents the additionalArgs block from deployment.yaml properly

Signed-off-by: Bhavin Gandhi <bhavin7392@gmail.com>

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -89,7 +89,7 @@ spec:
           - --token={{ .Values.token }}
           {{- end }}
           {{- if .Values.additionalArgs }}
-          {{ toYaml .Values.additionalArgs }}
+{{ toYaml .Values.additionalArgs | indent 10 }}
           {{- end }}
           resources:
 {{ toYaml .Values.resources | indent 12 }}
