Give FluxHelmRelease git source's a git URL
So that you can use charts from arbitrary repos (in principle), give
the GitChartSource fields for a URL and ref (branch).

--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -38,9 +38,14 @@ spec:
               type: object
             chart:
               oneOf:
-              - required: ['gitPath']
+              - required: ['git', 'path']
                 properties:
-                  gitPath:
+                  git:
+                    type: string
+                    format: git # not defined by OAS
+                  path:
+                    type: string
+                  ref:
                     type: string
               - required: ['repository', 'name', 'version']
                 properties:
