Add valueFiles to both CRD files

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -38,5 +38,9 @@ spec:
               type: string
             values:
               type: object
+            valueFiles:
+              type: array
+              items:
+                type: string
 {{- end -}}
 {{- end -}}
