--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -32,3 +32,7 @@ spec:
               type: string
             values:
               type: object
+            valueFiles:
+              type: array
+              items:
+                type: string
