Chart: deprecate Flux registry-cache-expiry option

--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -87,13 +87,15 @@ spec:
           {{- if .Values.git.label }}
           - --git-label={{ .Values.git.label }}
           {{- end }}
-          - --registry-cache-expiry={{ .Values.registry.cacheExpiry }}
           - --registry-poll-interval={{ .Values.registry.pollInterval }}
           - --registry-rps={{ .Values.registry.rps }}
           - --registry-burst={{ .Values.registry.burst }}
           - --registry-trace={{ .Values.registry.trace }}
           {{- if .Values.registry.insecureHosts }}
           - --registry-insecure-host={{ .Values.registry.insecureHosts }}
+          {{- end }}
+          {{- if .Values.registry.cacheExpiry }}
+          - --registry-cache-expiry={{ .Values.registry.cacheExpiry }}
           {{- end }}
           {{- if .Values.token }}
           - --connect=wss://cloud.weave.works/api/flux
