remove valueFiles, add valueFileSecrets
* add kubeConfig argument to Install function
* pass chartutils kubeClient to install function
* get values.yaml from secrets and merge in order
* update FluxHelmRelease type and crd's

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -38,9 +38,12 @@ spec:
               type: string
             values:
               type: object
-            valueFiles:
+            valueFileSecrets:
               type: array
               items:
-                type: string
+                type: object
+                properties:
+                  name:
+                    type: string
 {{- end -}}
 {{- end -}}
