--- a/deploy-helm/flux-helm-release-crd.yaml
+++ b/deploy-helm/flux-helm-release-crd.yaml
@@ -32,7 +32,10 @@ spec:
               type: string
             values:
               type: object
-            valueFiles:
+            valueFileSecrets:
               type: array
               items:
-                type: string
+                type: object
+                properties:
+                  name:
+                    type: string
