Fix icon URL Helm chart
Signed-off-by: Hidde Beydals <hello@hidde.co>

--- a/chart/flux/Chart.yaml
+++ b/chart/flux/Chart.yaml
@@ -10,4 +10,4 @@ maintainers:
   - name: stefanprodan
     email: stefan@weave.works
 engine: gotpl
-icon: https://landscape.cncf.io/logos/flux.svg
+icon: https://landscape.cncf.io/logos/weave-flux.svg
