be able to parameterize memcached image
Signed-off-by: David J. M. Karlsen <david@davidkarlsen.com>

--- a/chart/flux/values.yaml
+++ b/chart/flux/values.yaml
@@ -124,6 +124,8 @@ registry:
   cacheExpiry:
 
 memcached:
+  repository: memcached
+  tag: 1.4.25
   verbose: false
   maxItemSize: 1m
   maxMemory: 64
