--- a/chart/flux/templates/memcached.yaml
+++ b/chart/flux/templates/memcached.yaml
@@ -23,7 +23,7 @@ spec:
     spec:
       containers:
       - name: memcached
-        image: memcached:1.4.25
+        image: {{ .Values.memcached.repository }}:{{ .Values.memcached.tag }}
         imagePullPolicy: IfNotPresent
         args:
         - -m {{ .Values.memcached.maxMemory }}    # Maximum memory to use, in megabytes. 64MB is default.
