Replace Flux svg logo with png - fix logo in https://hub.helm.sh/charts/weave-flux/flux

--- a/chart/flux/Chart.yaml
+++ b/chart/flux/Chart.yaml
@@ -10,4 +10,4 @@ maintainers:
   - name: stefanprodan
     email: stefan@weave.works
 engine: gotpl
-icon: https://landscape.cncf.io/logos/weave-flux.svg
+icon: https://raw.githubusercontent.com/weaveworks/flux/master/site/images/weave-flux.png
