Add gitops as keyword for Helm Hub

--- a/chart/flux/Chart.yaml
+++ b/chart/flux/Chart.yaml
@@ -12,3 +12,5 @@ maintainers:
     email: stefan@weave.works
 engine: gotpl
 icon: https://raw.githubusercontent.com/weaveworks/flux/master/site/images/weave-flux.png
+keywords:
+  - gitops
