Expand values.yaml table for flux charts
***What does this commit/MR/PR do?***

- Expand values.yaml table for flux charts
- Adds unique replicaCount for helmOperator pods

***Why is this commit/MR/PR needed?***

- Comprehensive docs

Signed-off-by: Stephen Moloney <stephen@stephenmoloney.com>

--- a/chart/flux/templates/helm-operator-deployment.yaml
+++ b/chart/flux/templates/helm-operator-deployment.yaml
@@ -10,7 +10,7 @@ metadata:
     release: {{ .Release.Name }}
     heritage: {{ .Release.Service }}
 spec:
-  replicas: {{ .Values.replicaCount }}
+  replicas: {{ .Values.helmOperator.replicaCount }}
   selector:
     matchLabels:
       app: {{ template "flux.name" . }}-helm-operator
