Add resetValues field to CRD validation - fix valueFileSecrets validation

--- a/chart/flux/templates/helm-operator-crd.yaml
+++ b/chart/flux/templates/helm-operator-crd.yaml
@@ -38,14 +38,17 @@ spec:
             timeout:
               type: integer
               format: int64
+            resetValues:
+              type: boolean
             valueFileSecrets:
               type: array
-              items:
-                type: object
-                required: ['name']
-                properties:
-                  name:
-                    type: string
+              properties:
+                items:
+                  type: object
+                  required: ['name']
+                  properties:
+                    name:
+                      type: string
             values:
               type: object
             chart:
