--- a/chart/flux/templates/deployment.yaml
+++ b/chart/flux/templates/deployment.yaml
@@ -102,6 +102,15 @@ spec:
           {{- if .Values.registry.cacheExpiry }}
           - --registry-cache-expiry={{ .Values.registry.cacheExpiry }}
           {{- end }}
+          {{- if .Values.registry.ecr.region }}
+          - --registry-ecr-region={{ .Values.registry.ecr.region }}
+          {{- end }}
+          {{- if .Values.registry.ecr.includeId }}
+          - --registry-ecr-include-id={{ .Values.registry.ecr.includeId }}
+          {{- end }}
+          {{- if .Values.registry.ecr.excludeId }}
+          - --registry-ecr-exclude-id={{ .Values.registry.ecr.excludeId }}
+          {{- end }}
           {{- if .Values.token }}
           - --connect=wss://cloud.weave.works/api/flux
           - --token={{ .Values.token }}
